improving readme and cleaning code

--- a/vca_pipeline.ipynb
+++ b/vca_pipeline.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "2e6f329f",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "776ac9ed",
    "metadata": {},
    "outputs": [
@@ -80,7 +80,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current working directory: /Users/nzlab-la/Desktop/circulatory_tumor_DNA_analysis/code\n"
+      "Current working directory: /Users/nzlab-la/Desktop/circulatory_tumor_DNA_analysis\n"
      ]
     }
    ],
@@ -112,7 +112,7 @@
    "id": "5c3ae846",
    "metadata": {},
    "source": [
-    "## Get the reference genome (GRCh38)\n",
+    "## Downloading the reference genome (GRCh38)\n",
     "___"
    ]
   },
@@ -473,7 +473,7 @@
          "type": "string"
         }
        ],
-       "ref": "65e3f55b-41cb-4482-bc97-d669a6efb4f3",
+       "ref": "5297f193-c6f1-4fb7-b991-63928603c844",
        "rows": [
         [
          "0",
@@ -1044,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "a9de885e",
    "metadata": {},
    "outputs": [
@@ -1072,6 +1072,26 @@
     "print(f\"{metadata['sample_type'].value_counts().to_string()}\\n\")\n",
     "print(f\"Unique patient IDs: {metadata['sample_id'].nunique()}\\n\")\n",
     "print(f\"{metadata['isolate'].value_counts().to_string()}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab550a6d",
+   "metadata": {},
+   "source": [
+    "## Extracting patient_id and timepoints from metadata\n",
+    "___\n",
+    "\n",
+    "The SRA metadata use a consistent `run_alias` pattern:\n",
+    "\n",
+    "- PBMC samples: `PBMC_<ID>.final.bam`  \n",
+    "  patient_id = <ID>, sample_type = PBMC, no timepoint\n",
+    "\n",
+    "- FFPE tumor samples: `FFPE_<ID>.final.bam`  \n",
+    "  patient_id = <ID>, sample_type = Tissue, no timepoint\n",
+    "\n",
+    "- ctDNA samples: `<ID>.final.bam` or `<ID>-<N>.final.bam`  \n",
+    "  patient_id = <ID>, sample_type = ctDNA, timepoint 0 (no suffix) or timepoint N (suffix -N)\n"
    ]
   },
   {
@@ -1390,7 +1410,7 @@
          "type": "string"
         }
        ],
-       "ref": "6a476f7c-6aba-41f0-9d9c-731f7833ff20",
+       "ref": "b0b6b3c6-1af2-4b4d-9a9f-7aa4dbff6c2d",
        "rows": [
         [
          "0",
@@ -2053,7 +2073,7 @@
          "type": "integer"
         }
        ],
-       "ref": "d76e023f-f18d-4043-9d97-a0ffdfe050de",
+       "ref": "b24f325e-fbd2-432d-b1f1-d0692b592a49",
        "rows": [
         [
          "0",
@@ -2776,7 +2796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "416465d0",
    "metadata": {},
    "outputs": [
@@ -2810,7 +2830,7 @@
          "type": "string"
         }
        ],
-       "ref": "68b87b7b-3238-46b6-adde-369f90342722",
+       "ref": "f06306c9-dfbc-4f6c-8d2a-267a1f150e58",
        "rows": [
         [
          "108",
@@ -3095,7 +3115,7 @@
    "source": [
     "def build_bwa_index(reference_fasta_path):\n",
     "    \"\"\"\n",
-    "    Build BWA index for reference genome if not already present.\n",
+    "    Build BWA index for reference genome.\n",
     "    Input: reference_fasta_path (Path or str)\n",
     "    Output: None\n",
     "    \"\"\"\n",
@@ -3414,7 +3434,7 @@
          "type": "float"
         }
        ],
-       "ref": "b783dce7-856e-4bab-a934-d579b0998fed",
+       "ref": "adba36d1-2754-4d85-8445-3c038af98193",
        "rows": [
         [
          "0",
@@ -4140,7 +4160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "d2c1b951",
    "metadata": {},
    "outputs": [
@@ -4189,7 +4209,7 @@
          "type": "float"
         }
        ],
-       "ref": "58a629d7-6ac2-4334-996b-3aaaeec101de",
+       "ref": "adc49ff7-dc5f-45ac-9736-13bf8c03ad9a",
        "rows": [
         [
          "4",
@@ -4480,7 +4500,7 @@
          "type": "float"
         }
        ],
-       "ref": "aefedef2-a870-443b-8de6-90f7f4aa0135",
+       "ref": "3385b09f-fcd1-430f-90cc-bd910c7d9689",
        "rows": [
         [
          "6",
@@ -4606,7 +4626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "cdbec78c",
    "metadata": {},
    "outputs": [
