cleaning final code

--- a/vca_pipeline.ipynb
+++ b/vca_pipeline.ipynb
@@ -26,6 +26,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "82fc8f15",
+   "metadata": {},
+   "source": [
+    "<img src=\"docs/image.png\" alt=\"VCA pipeline\" width=\"900\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4902d374",
    "metadata": {},
    "source": [
@@ -66,7 +74,7 @@
    "id": "834dded5",
    "metadata": {},
    "source": [
-    "## Paths to data\n",
+    "### Paths to data\n",
     "___"
    ]
   },
@@ -112,7 +120,7 @@
    "id": "5c3ae846",
    "metadata": {},
    "source": [
-    "## Downloading the reference genome (GRCh38)\n",
+    "### Downloading the reference genome (GRCh38)\n",
     "___"
    ]
   },
@@ -173,7 +181,7 @@
    "id": "10cad90c",
    "metadata": {},
    "source": [
-    "## Get metadata for bioproject: PRJNA714799\n",
+    "### Get metadata for bioproject: PRJNA714799\n",
     "___"
    ]
   },
@@ -473,7 +481,7 @@
          "type": "string"
         }
        ],
-       "ref": "5297f193-c6f1-4fb7-b991-63928603c844",
+       "ref": "d6d0bba6-57d2-4151-bd36-c5c2d3a1550c",
        "rows": [
         [
          "0",
@@ -1079,7 +1087,7 @@
    "id": "ab550a6d",
    "metadata": {},
    "source": [
-    "## Extracting patient_id and timepoints from metadata\n",
+    "### Extracting patient_id and timepoints from metadata\n",
     "___\n",
     "\n",
     "The SRA metadata use a consistent `run_alias` pattern:\n",
@@ -1410,7 +1418,7 @@
          "type": "string"
         }
        ],
-       "ref": "b0b6b3c6-1af2-4b4d-9a9f-7aa4dbff6c2d",
+       "ref": "443d201d-60d0-46ea-bd0d-3c3787384694",
        "rows": [
         [
          "0",
@@ -2073,7 +2081,7 @@
          "type": "integer"
         }
        ],
-       "ref": "b24f325e-fbd2-432d-b1f1-d0692b592a49",
+       "ref": "0f833e48-643b-4199-994a-914f67564c2c",
        "rows": [
         [
          "0",
@@ -2134,251 +2142,11 @@
          "CTC309",
          "[0, 2, 9]",
          "3"
-        ],
-        [
-         "38",
-         "CTC320",
-         "[0, 2, 3]",
-         "3"
-        ],
-        [
-         "39",
-         "CTC325",
-         "[0, 2, 9]",
-         "3"
-        ],
-        [
-         "28",
-         "CTC252",
-         "[0, 2, 3]",
-         "3"
-        ],
-        [
-         "40",
-         "CTC327",
-         "[0, 2, 5]",
-         "3"
-        ],
-        [
-         "42",
-         "CTC340",
-         "[0, 2, 8]",
-         "3"
-        ],
-        [
-         "43",
-         "CTC341",
-         "[0, 2, 5]",
-         "3"
-        ],
-        [
-         "44",
-         "CTC342",
-         "[0, 2, 5]",
-         "3"
-        ],
-        [
-         "45",
-         "CTC352",
-         "[0, 2, 4]",
-         "3"
-        ],
-        [
-         "46",
-         "CTC358",
-         "[0, 2, 6]",
-         "3"
-        ],
-        [
-         "47",
-         "CTC362",
-         "[0, 2, 5]",
-         "3"
-        ],
-        [
-         "48",
-         "C_fw017",
-         "[0, 2, 6]",
-         "3"
-        ],
-        [
-         "49",
-         "C_fw018",
-         "[0, 2, 5]",
-         "3"
-        ],
-        [
-         "50",
-         "C_fw019",
-         "[0, 2, 5]",
-         "3"
-        ],
-        [
-         "51",
-         "C_fw028",
-         "[0, 2, 5]",
-         "3"
-        ],
-        [
-         "52",
-         "C_fw030",
-         "[0, 2, 4]",
-         "3"
-        ],
-        [
-         "41",
-         "CTC336",
-         "[0, 2, 7]",
-         "3"
-        ],
-        [
-         "53",
-         "C_fw048",
-         "[0, 2, 5]",
-         "3"
-        ],
-        [
-         "27",
-         "CTC248",
-         "[0, 2, 7]",
-         "3"
-        ],
-        [
-         "25",
-         "CTC238",
-         "[0, 2, 4]",
-         "3"
-        ],
-        [
-         "1",
-         "CTC003",
-         "[0, 2, 15]",
-         "3"
-        ],
-        [
-         "2",
-         "CTC030",
-         "[0, 2, 6]",
-         "3"
-        ],
-        [
-         "3",
-         "CTC031",
-         "[0, 2, 3]",
-         "3"
-        ],
-        [
-         "4",
-         "CTC041",
-         "[0, 2, 3]",
-         "3"
-        ],
-        [
-         "5",
-         "CTC049",
-         "[0, 2, 4]",
-         "3"
-        ],
-        [
-         "6",
-         "CTC073",
-         "[0, 2, 4]",
-         "3"
-        ],
-        [
-         "7",
-         "CTC075",
-         "[0, 3, 8]",
-         "3"
-        ],
-        [
-         "8",
-         "CTC086",
-         "[0, 2, 6]",
-         "3"
-        ],
-        [
-         "9",
-         "CTC101",
-         "[0, 2, 6]",
-         "3"
-        ],
-        [
-         "10",
-         "CTC121",
-         "[0, 2, 4]",
-         "3"
-        ],
-        [
-         "11",
-         "CTC127",
-         "[0, 2, 4]",
-         "3"
-        ],
-        [
-         "26",
-         "CTC247",
-         "[0, 2, 3]",
-         "3"
-        ],
-        [
-         "12",
-         "CTC144",
-         "[0, 2, 4]",
-         "3"
-        ],
-        [
-         "14",
-         "CTC182",
-         "[0, 2, 7]",
-         "3"
-        ],
-        [
-         "15",
-         "CTC185",
-         "[0, 2, 5]",
-         "3"
-        ],
-        [
-         "16",
-         "CTC186",
-         "[0, 2, 5]",
-         "3"
-        ],
-        [
-         "17",
-         "CTC194",
-         "[0, 2, 3]",
-         "3"
-        ],
-        [
-         "18",
-         "CTC200",
-         "[0, 2, 4]",
-         "3"
-        ],
-        [
-         "19",
-         "CTC202",
-         "[0, 2, 3]",
-         "3"
-        ],
-        [
-         "20",
-         "CTC220",
-         "[0, 2, 7]",
-         "3"
-        ],
-        [
-         "21",
-         "CTC227",
-         "[0, 2, 8]",
-         "3"
         ]
        ],
        "shape": {
         "columns": 3,
-        "rows": 50
+        "rows": 10
        }
       },
       "text/html": [
@@ -2466,246 +2234,6 @@
        "      <td>[0, 2, 9]</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38</th>\n",
-       "      <td>CTC320</td>\n",
-       "      <td>[0, 2, 3]</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>CTC325</td>\n",
-       "      <td>[0, 2, 9]</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>CTC252</td>\n",
-       "      <td>[0, 2, 3]</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40</th>\n",
-       "      <td>CTC327</td>\n",
-       "      <td>[0, 2, 5]</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>42</th>\n",
-       "      <td>CTC340</td>\n",
-       "      <td>[0, 2, 8]</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43</th>\n",
-       "      <td>CTC341</td>\n",
-       "      <td>[0, 2, 5]</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>44</th>\n",
-       "      <td>CTC342</td>\n",
-       "      <td>[0, 2, 5]</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>45</th>\n",
-       "      <td>CTC352</td>\n",
-       "      <td>[0, 2, 4]</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>46</th>\n",
-       "      <td>CTC358</td>\n",
-       "      <td>[0, 2, 6]</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>47</th>\n",
-       "      <td>CTC362</td>\n",
-       "      <td>[0, 2, 5]</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>48</th>\n",
-       "      <td>C_fw017</td>\n",
-       "      <td>[0, 2, 6]</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>49</th>\n",
-       "      <td>C_fw018</td>\n",
-       "      <td>[0, 2, 5]</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50</th>\n",
-       "      <td>C_fw019</td>\n",
-       "      <td>[0, 2, 5]</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>51</th>\n",
-       "      <td>C_fw028</td>\n",
-       "      <td>[0, 2, 5]</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>52</th>\n",
-       "      <td>C_fw030</td>\n",
-       "      <td>[0, 2, 4]</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41</th>\n",
-       "      <td>CTC336</td>\n",
-       "      <td>[0, 2, 7]</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>53</th>\n",
-       "      <td>C_fw048</td>\n",
-       "      <td>[0, 2, 5]</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>CTC248</td>\n",
-       "      <td>[0, 2, 7]</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>CTC238</td>\n",
-       "      <td>[0, 2, 4]</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>CTC003</td>\n",
-       "      <td>[0, 2, 15]</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>CTC030</td>\n",
-       "      <td>[0, 2, 6]</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>CTC031</td>\n",
-       "      <td>[0, 2, 3]</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>CTC041</td>\n",
-       "      <td>[0, 2, 3]</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>CTC049</td>\n",
-       "      <td>[0, 2, 4]</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>CTC073</td>\n",
-       "      <td>[0, 2, 4]</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>CTC075</td>\n",
-       "      <td>[0, 3, 8]</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>CTC086</td>\n",
-       "      <td>[0, 2, 6]</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>CTC101</td>\n",
-       "      <td>[0, 2, 6]</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>CTC121</td>\n",
-       "      <td>[0, 2, 4]</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>CTC127</td>\n",
-       "      <td>[0, 2, 4]</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>CTC247</td>\n",
-       "      <td>[0, 2, 3]</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>CTC144</td>\n",
-       "      <td>[0, 2, 4]</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>CTC182</td>\n",
-       "      <td>[0, 2, 7]</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>CTC185</td>\n",
-       "      <td>[0, 2, 5]</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>CTC186</td>\n",
-       "      <td>[0, 2, 5]</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>CTC194</td>\n",
-       "      <td>[0, 2, 3]</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>CTC200</td>\n",
-       "      <td>[0, 2, 4]</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>CTC202</td>\n",
-       "      <td>[0, 2, 3]</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>CTC220</td>\n",
-       "      <td>[0, 2, 7]</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>CTC227</td>\n",
-       "      <td>[0, 2, 8]</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -2721,47 +2249,7 @@
        "34     CTC277   [0, 2, 6]             3\n",
        "35     CTC281   [0, 2, 3]             3\n",
        "36     CTC292  [0, 2, 10]             3\n",
-       "37     CTC309   [0, 2, 9]             3\n",
-       "38     CTC320   [0, 2, 3]             3\n",
-       "39     CTC325   [0, 2, 9]             3\n",
-       "28     CTC252   [0, 2, 3]             3\n",
-       "40     CTC327   [0, 2, 5]             3\n",
-       "42     CTC340   [0, 2, 8]             3\n",
-       "43     CTC341   [0, 2, 5]             3\n",
-       "44     CTC342   [0, 2, 5]             3\n",
-       "45     CTC352   [0, 2, 4]             3\n",
-       "46     CTC358   [0, 2, 6]             3\n",
-       "47     CTC362   [0, 2, 5]             3\n",
-       "48    C_fw017   [0, 2, 6]             3\n",
-       "49    C_fw018   [0, 2, 5]             3\n",
-       "50    C_fw019   [0, 2, 5]             3\n",
-       "51    C_fw028   [0, 2, 5]             3\n",
-       "52    C_fw030   [0, 2, 4]             3\n",
-       "41     CTC336   [0, 2, 7]             3\n",
-       "53    C_fw048   [0, 2, 5]             3\n",
-       "27     CTC248   [0, 2, 7]             3\n",
-       "25     CTC238   [0, 2, 4]             3\n",
-       "1      CTC003  [0, 2, 15]             3\n",
-       "2      CTC030   [0, 2, 6]             3\n",
-       "3      CTC031   [0, 2, 3]             3\n",
-       "4      CTC041   [0, 2, 3]             3\n",
-       "5      CTC049   [0, 2, 4]             3\n",
-       "6      CTC073   [0, 2, 4]             3\n",
-       "7      CTC075   [0, 3, 8]             3\n",
-       "8      CTC086   [0, 2, 6]             3\n",
-       "9      CTC101   [0, 2, 6]             3\n",
-       "10     CTC121   [0, 2, 4]             3\n",
-       "11     CTC127   [0, 2, 4]             3\n",
-       "26     CTC247   [0, 2, 3]             3\n",
-       "12     CTC144   [0, 2, 4]             3\n",
-       "14     CTC182   [0, 2, 7]             3\n",
-       "15     CTC185   [0, 2, 5]             3\n",
-       "16     CTC186   [0, 2, 5]             3\n",
-       "17     CTC194   [0, 2, 3]             3\n",
-       "18     CTC200   [0, 2, 4]             3\n",
-       "19     CTC202   [0, 2, 3]             3\n",
-       "20     CTC220   [0, 2, 7]             3\n",
-       "21     CTC227   [0, 2, 8]             3"
+       "37     CTC309   [0, 2, 9]             3"
       ]
      },
      "execution_count": 9,
@@ -2791,7 +2279,7 @@
     "    return eligible_df\n",
     "# Find eligible patients\n",
     "eligible_df = find_eligible_patients(ctdna)\n",
-    "eligible_df.sort_values(\"n_timepoints\", ascending=True).head(50)"
+    "eligible_df.sort_values(\"n_timepoints\", ascending=True).head(10)"
    ]
   },
   {
@@ -2830,7 +2318,7 @@
          "type": "string"
         }
        ],
-       "ref": "f06306c9-dfbc-4f6c-8d2a-267a1f150e58",
+       "ref": "55532285-fdca-412b-bc2f-5311b1a10bc2",
        "rows": [
         [
          "108",
@@ -3079,13 +2567,13 @@
    "id": "a51e8a51",
    "metadata": {},
    "source": [
-    "# Perform alignment\n",
+    "### Perform alignment\n",
     "___"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "8232b4f4",
    "metadata": {},
    "outputs": [
@@ -3191,7 +2679,7 @@
    "id": "27be637d",
    "metadata": {},
    "source": [
-    "## Duplicate removal\n",
+    "### Duplicate removal\n",
     "___"
    ]
   },
@@ -3260,7 +2748,7 @@
    "id": "1c74a4a0",
    "metadata": {},
    "source": [
-    "## Gene Selection\n",
+    "### Gene Selection\n",
     "___"
    ]
   },
@@ -3302,7 +2790,7 @@
    "id": "88f198c5",
    "metadata": {},
    "source": [
-    "## Variant Calling\n",
+    "### Variant Calling\n",
     "___"
    ]
   },
@@ -3434,7 +2922,7 @@
          "type": "float"
         }
        ],
-       "ref": "adba36d1-2754-4d85-8445-3c038af98193",
+       "ref": "39bb670b-3add-4889-bdb5-6025e72b55c1",
        "rows": [
         [
          "0",
@@ -4154,7 +3642,7 @@
    "id": "ba58e929",
    "metadata": {},
    "source": [
-    "## Selecting a candidate variant for diagnossis assays development\n",
+    "### Selecting a candidate variant for diagnossis assays development\n",
     "___"
    ]
   },
@@ -4209,7 +3697,7 @@
          "type": "float"
         }
        ],
-       "ref": "adc49ff7-dc5f-45ac-9736-13bf8c03ad9a",
+       "ref": "4b906634-00d3-4623-beb7-38a563d85332",
        "rows": [
         [
          "4",
@@ -4500,7 +3988,7 @@
          "type": "float"
         }
        ],
-       "ref": "3385b09f-fcd1-430f-90cc-bd910c7d9689",
+       "ref": "7ac000f8-d57e-461f-a999-eb073e2fc473",
        "rows": [
         [
          "6",
