--- a/vca_pipeline.ipynb
+++ b/vca_pipeline.ipynb
@@ -4114,7 +4114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "cdbec78c",
    "metadata": {},
    "outputs": [
@@ -4134,18 +4134,38 @@
     "timepoint_order = [\"pre_treatment\", \"during_treatment\", \"post_treatment\"]\n",
     "selected_variant[\"sample_label\"] = pd.Categorical(selected_variant[\"sample_label\"],categories=timepoint_order, ordered=True)\n",
     "selected_variant_sorted = selected_variant.sort_values(\"sample_label\")\n",
-    "\n",
     "plt.figure(figsize=(6, 4))\n",
     "plt.plot(selected_variant_sorted[\"sample_label\"],selected_variant_sorted[\"allele_frequency\"],marker=\"o\",linewidth=2, markersize=8,)\n",
     "plt.title(\"KRAS Variant Allele Frequency Over Stages\", fontsize=12, weight=\"bold\")\n",
     "plt.xlabel(\"Stage\", fontsize=10)\n",
     "plt.ylabel(\"Allele Frequency\", fontsize=10)\n",
     "plt.ylim(0, 1)\n",
-    "#plt.xticks(rotation=45, ha=\"right\")\n",
     "plt.grid(True, alpha=0.3, linestyle=\"--\")\n",
     "plt.tight_layout()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "872dadc1",
+   "metadata": {},
+   "source": [
+    "### Analysis Summary:\n",
+    "_____\n",
+    "\n",
+    "\n",
+    "**KRAS variant at position 25,209,843 (chr12)** was identified (read depth ≥20x and allele frequency ≥10%) as a persistent mutation across all treatment stages in patient CTC030. \n",
+    "\n",
+    "**KRAS variant at position 25,209,843 (chr12)** has potential as a longitudinal biomarker for colorectal cancer monitoring.\n",
+    "\n",
+    "**Limitations:** These findings are based on a single patient case study. This pipeline is explicitly designed to identify variants in circulating tumor DNA for single patients and for a given gene. For this reason, no conclusions can be extrapolated to a population level."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d173094",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
