--- a/digital_PCR/ddpcr_simulation.ipynb
+++ b/digital_PCR/ddpcr_simulation.ipynb
@@ -31,9 +31,9 @@
     "- $p$ = fraction of positive droplets ($\\frac{\\text{positive droplets}}{\\text{total droplets}}$)\n",
     "\n",
     "**Concentration calculation:**\n",
-    "$$\\text{Copies/µL} = \\frac{\\lambda}{\\text{droplet volume (µL)}}$$\n",
+    "$$\\text{Copies/\u00b5L} = \\frac{\\lambda}{\\text{droplet volume (\u00b5L)}}$$\n",
     "\n",
-    "**Poisson confidence intervals:** The 95% confidence interval for λ is calculated using Poisson distribution properties."
+    "**Poisson confidence intervals:** The 95% confidence interval for \u03bb is calculated using Poisson distribution properties."
    ]
   },
   {
@@ -43,24 +43,24 @@
    "outputs": [],
    "source": [
     "# Completed implementations\n",
-    "# ✓ Import libraries and configure plotting style\n",
-    "# ✓ Define DigitalPCRConfig with Bio-Rad QX200 specifications\n",
-    "# ✓ Implement Poisson lambda calculation with confidence intervals\n",
-    "# ✓ Create concentration converter (lambda → copies/µL)\n",
-    "# ✓ Build VAF calculator (mutant/(mutant+wildtype) × 100)\n",
-    "# ✓ Simulate droplet partitioning with Poisson distribution\n",
-    "# ✓ Generate realistic fluorescence signals (FAM/VIC channels)\n",
-    "# ✓ Model PCR efficiency (95%) and false positives (0.01%)\n",
-    "# ✓ Create 1D amplitude plots for channel-by-channel QC\n",
-    "# ✓ Implement LOD calculation using Rule of Three\n",
-    "# ✓ Run LOD analysis for 5K/10K/20K DNA inputs\n",
-    "# ✓ Simulate 5 VAF levels (5%, 1%, 0.5%, 0.1%, 0.01%)\n",
-    "# ✓ Calculate measured VAF with Poisson statistics\n",
+    "# \u2713 Import libraries and configure plotting style\n",
+    "# \u2713 Define DigitalPCRConfig with Bio-Rad QX200 specifications\n",
+    "# \u2713 Implement Poisson lambda calculation with confidence intervals\n",
+    "# \u2713 Create concentration converter (lambda \u2192 copies/\u00b5L)\n",
+    "# \u2713 Build VAF calculator (mutant/(mutant+wildtype) \u00d7 100)\n",
+    "# \u2713 Simulate droplet partitioning with Poisson distribution\n",
+    "# \u2713 Generate realistic fluorescence signals (FAM/VIC channels)\n",
+    "# \u2713 Model PCR efficiency (95%) and false positives (0.01%)\n",
+    "# \u2713 Create 1D amplitude plots for channel-by-channel QC\n",
+    "# \u2713 Implement LOD calculation using Rule of Three\n",
+    "# \u2713 Run LOD analysis for 5K/10K/20K DNA inputs\n",
+    "# \u2713 Simulate 5 VAF levels (5%, 1%, 0.5%, 0.1%, 0.01%)\n",
+    "# \u2713 Calculate measured VAF with Poisson statistics\n",
     "\n",
     "# Pending implementations\n",
-    "# ☐ Create 2D scatter plot with four-quadrant classification\n",
-    "# ☐ Generate formatted quantification report (pandas DataFrame)\n",
-    "# ☐ Export results to CSV/Excel for  documentation"
+    "# \u2610 Create 2D scatter plot with four-quadrant classification\n",
+    "# \u2610 Generate formatted quantification report (pandas DataFrame)\n",
+    "# \u2610 Export results to CSV/Excel for  documentation"
    ]
   },
   {
@@ -100,17 +100,26 @@
     }
    ],
    "source": [
+    "import yaml\n",
+    "from pathlib import Path\n",
+    "\n",
+    "# Load Configuration\n",
+    "CONFIG_PATH = \"../config/pipeline_config.yml\"\n",
+    "with open(CONFIG_PATH, 'r') as f:\n",
+    "    pipeline_config = yaml.safe_load(f)\n",
+    "GENE_NAME = pipeline_config['variant_calling']['target_gene']['name']\n",
+    "\n",
     "class DigitalPCRConfig:\n",
     "    \"\"\"Configuration parameters for droplet digital PCR simulation based on Bio-Rad QX200/QX600 specifications.\"\"\"\n",
     "    # Droplet partitioning parameters\n",
     "    N_DROPLETS = 20000  # Total droplets per well (Bio-Rad QX200 standard)\n",
     "    DROPLET_VOLUME_NL = 0.85  # Volume per droplet in nanoliters\n",
     "    REACTION_VOLUME_UL = 20.0  # Total PCR reaction volume in microliters\n",
-    "    # FAM channel (mutant KRAS detection)\n",
+    "    # FAM channel (mutant detection)\n",
     "    FAM_BASELINE = 1000  # Background fluorescence (no target)\n",
     "    FAM_POSITIVE = 8000  # Signal fluorescence (target present)\n",
     "    FAM_THRESHOLD = 3500  # Cutoff for positive droplet classification\n",
-    "    # VIC channel (wildtype KRAS detection)\n",
+    "    # VIC channel (wildtype detection)\n",
     "    VIC_BASELINE = 1200  # Background fluorescence (no target)\n",
     "    VIC_POSITIVE = 7500  # Signal fluorescence (target present)\n",
     "    VIC_THRESHOLD = 3500  # Cutoff for positive droplet classification\n",
@@ -119,12 +128,13 @@
     "    PCR_EFFICIENCY = 0.95  # Probability of successful amplification (95%)\n",
     "    FALSE_POSITIVE_RATE = 0.0001  # Background contamination rate (0.01%)\n",
     "    # DNA quantification constants\n",
-    "    DNA_CONCENTRATION_NG_UL = 5.0  # Input DNA concentration (ng/µL)\n",
+    "    DNA_CONCENTRATION_NG_UL = 5.0  # Input DNA concentration (ng/\u00b5L)\n",
     "    HUMAN_GENOME_SIZE_BP = 3.2e9  # Haploid human genome size (base pairs)\n",
     "    AVG_BP_WEIGHT_DALTONS = 650  # Average molecular weight per base pair\n",
     "    AVOGADRO = 6.022e23  # Avogadro's number (molecules/mole)\n",
     "\n",
     "config = DigitalPCRConfig()\n",
+    "print(f\"Target Gene: {GENE_NAME}\")\n",
     "print(f\"Droplets per well: {config.N_DROPLETS:,}\")\n",
     "print(f\"Droplet volume: {config.DROPLET_VOLUME_NL} nL\")\n",
     "print(f\"PCR efficiency: {config.PCR_EFFICIENCY*100:.1f}%\")"
@@ -151,7 +161,7 @@
     "    return lambda_estimate, lambda_lower, lambda_upper\n",
     "\n",
     "def calculate_concentration(lambda_value: float, droplet_volume_nl: float = config.DROPLET_VOLUME_NL) -> float:\n",
-    "    \"\"\"Convert lambda to concentration in copies/µL.\"\"\"\n",
+    "    \"\"\"Convert lambda to concentration in copies/\u00b5L.\"\"\"\n",
     "    droplet_volume_ul = droplet_volume_nl / 1000\n",
     "    return lambda_value / droplet_volume_ul\n",
     "\n"
@@ -275,7 +285,7 @@
    "outputs": [],
    "source": [
     "def calculate_vaf(mutant_concentration: float, wildtype_concentration: float) -> float:\n",
-    "    \"\"\"Calculate variant allele frequency as percentage: mutant / (mutant + wildtype) × 100.\"\"\"\n",
+    "    \"\"\"Calculate variant allele frequency as percentage: mutant / (mutant + wildtype) \u00d7 100.\"\"\"\n",
     "    total_concentration = mutant_concentration + wildtype_concentration\n",
     "    if total_concentration == 0:\n",
     "        return 0.0\n",
